--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "d3": "^7.8.0",
     "pinia": "^2.0.32",
+    "typescript": "^5.3.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -22,7 +23,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "naive-ui": "^2.34.3",
-    "prettier": "^2.7.1",
+    "prettier": "2.8.8",
     "vite": "^4.0.0",
     "vitest": "^0.26.2"
   }
