--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
