--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ib",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,11 +9,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "d3": "^7.8.0",
-    "pinia": "^2.0.32",
-    "typescript": "^5.3.2",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "@vue/cli": "^5.0.8",
+    "d3": "^7.9.0",
+    "pinia": "^2.2.2",
+    "typescript": "^5.6.2",
+    "vue": "^3.5.8",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
